discussion/kv_engine/178758/178758_rev26_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52311: [2/n] Pause / Resume Bucket: BucketManager support

Implement pause & resume commands in BucketManager.

Commands are implemented as far as the EngineIface, whose default
implementation is to return 'not_supported'. Specific engine
implemenations behave as follows:

* Default engine 'supports' pause & resume - insofar as it returns
  'success' as it has no on-disk state.

* EWouldBlock engine passes the call down to the underlying engine.

* ep-engine for now has a stub implementation which returns 'success'
  - this will be filled in in subsequent patches.

Change-Id: I53f491a21f5a1e701bafd16ea7b3dd54ab5f786c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-08 13:53:16.000000000
Message: 
Uploaded patch set 26.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-08 14:48:22.000000000
Message: 
Patch Set 26: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19401/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/tests/testapp/testapp_pause_resume.cc b/tests/testapp/testapp_pause_resume.cc
index b82d292ab..da700b0f3 100644
--- a/tests/testapp/testapp_pause_resume.cc
+++ b/tests/testapp/testapp_pause_resume.cc
@@ -33,7 +33,9 @@ protected:
                                 std::chrono::seconds deadline) {
         // Pause is non-blocking, need to wait for it to complete.
         return cb::waitForPredicateUntil(
-                [&amp;] { return getBucketInformation(bucket)[&quot;state&quot;] == stateName; },
+                [&amp;] {
+                    return getBucketInformation(bucket)[&quot;state&quot;] == stateName;
+                },
                 deadline);
     }
 };
@@ -97,10 +99,10 @@ TEST_P(PauseResumeTest, DeleteWhenPaused) {
     mcd_env-&gt;getTestBucket().createBucket(testBucket, &quot;&quot;, *adminConnection);
 
     // Pause the bucket
-    auto rsp = adminConnection-&gt;execute(
-            BinprotPauseBucketCommand{testBucket});
+    auto rsp = adminConnection-&gt;execute(BinprotPauseBucketCommand{testBucket});
     ASSERT_EQ(cb::mcbp::Status::Success, rsp.getStatus()) &lt;&lt; rsp.getDataView();
-    EXPECT_TRUE(waitUntilBucketStateIs(testBucket, &quot;paused&quot;, std::chrono::seconds{10}))
+    EXPECT_TRUE(waitUntilBucketStateIs(
+            testBucket, &quot;paused&quot;, std::chrono::seconds{10}))
             &lt;&lt; getBucketInformation(testBucket)[&quot;state&quot;];
 
     // Delete should succeed.

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19401/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20180/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_pause_resume.cc:35:20: error: no member named "waitForPredicateUntil" in namespace "cb" [clang-diagnostic-error]
        return cb::waitForPredicateUntil(
                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20180/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_pause_resume.cc:35:20:
error: no member named "waitForPredicateUntil" in namespace "cb" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20180/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49155/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_stream_ephemeral_test.cc(107): error C2039: "waitForPredicate": is not a member of "cb" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49155/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23256/ : FAILURE

Compile error at [2022-09-08T14:40:40.910Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23256/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30543/ : FAILURE

Compile error at [2022-09-08T14:42:42.566Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30543/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9885/ : FAILURE

Compile error at [2022-09-08T14:38:12.268Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9885/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21486/ : FAILURE

Compile error at [2022-09-08T14:39:21.545Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:799:9:
error: no member named "waitForPredicate" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21486/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22149/ : FAILURE

Compile error at [2022-09-08T14:39:35.010Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22149/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9983/ : FAILURE

Compile error at [2022-09-08T14:03:42.037Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9983/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22507/ : FAILURE

Compile error at [2022-09-08T14:42:59.765Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_ephemeral_test.cc:107:9:
error: ?waitForPredicate? is not a member of ?cb?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22507/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41316/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
